Review "Path with Maximum Probability" problem